--- a/css/external_styles.css
+++ b/css/external_styles.css
@@ -170,3 +170,41 @@ html, body {
       margin-bottom: 20px;
     }
   }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {  
+    border: 1px solid #000000;       
+    padding: 8px;
+    text-align: left; 
+}
+th {
+    background-color: #cac4c4;
+    font-weight: bold;
+}
+
+tr:nth-child(even) {
+    background-color: #eaeaea;
+}
+
+.image-cell img {
+  width: 100px;
+  height: auto; 
+}
+
+
+.image-cell2 img {
+  width: 400px;
+  height: auto; 
+}
+.image-cell2 img {
+  width: 300px;
+  height: auto; 
+}
+.titulostabl{
+  color:#000000;
+  text-align: center;
+}
