--- a/css/fuc_styles.css
+++ b/css/fuc_styles.css
@@ -1,7 +1,6 @@
 body{
-    background-color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
-    color: #000dff;
+    color: #003367;
 }
 
 .back-to-top {
@@ -26,18 +25,16 @@ table {
     border-collapse: collapse;
 }
 
-th, td {  
-    border: 1px solid #000000;       
+th, td {         
     padding: 8px;
-    text-align: left; 
+    text-align: left;
 }
 th {
-    background-color: #cac4c4;
+    background-color: #6b6868;
     font-weight: bold;
 }
-
-tr:nth-child(even) {
-    background-color: #eaeaea;
+.enca{
+    color: #ffffff;
 }
 
 .image-cell img {
@@ -45,7 +42,31 @@ tr:nth-child(even) {
     height: auto; 
 }
 
+.header-fuc{
+    background: #99ccff;
+    border-radius: 5px;
+    padding: 4px;
+    border: 1px solid #000000; 
 
+}
 
+.nav-lingua{
+    background: #99ccff;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #000000; 
+}
 
-  
+.prin{
+    background: #cce7ff;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #000000; 
+}
+
+.article{
+    background: #e6f2ff;
+    border-radius: 5px;
+    padding: 20px;
+    border: 1px solid #000000; 
+}
